2005-08-05  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/Checkpoint.py (rcs): define variable comment before using it. 

2005-08-04  Don Allingham  <don@gramps-project.org>
	* src/Spell.py: Interface to gtkspell
        * src/AddrEdit.py: add spell checker to notes
	* src/AttrEdit.py: add spell checker to notes
	* src/EditPerson.py: add spell checker to notes
	* src/EditPlace.py: add spell checker to notes
	* src/EditSource.py: add spell checker to notes
	* src/EventEdit.py: add spell checker to notes
	* src/ImageSelect.py: add spell checker to notes
	* src/Marriage.py: add spell checker to notes
	* src/NameEdit.py: add spell checker to notes
	* src/NoteEdit.py: add spell checker to notes
	* src/Sources.py: add spell checker to notes
	* src/ImageSelect.py: fixed thumbnail dnd selection
	* src/AttrEdit.py: don't used reserved word "list"
	* src/EditPerson.py: Pass correct attribute list to editor
	* src/GrampsBSDDB.py: persistently load/save attribute lists
	* src/GrampsDbBase.py: update attributes on commit
	* src/Marriage.py: Pass correct attribute list to editor

2005-08-04  Alex Roitman  <shura@gramps-project.org>
	* NEWS: Update.
	* src/MergePeople.py: Typos.
	* src/plugins/NavWebPage.py: Typos.
	* src/po/template.po: Update for upcoming 2.0.6.
	* src/Report.py (parse_report_options_frame): Fallback to trivial
	filter on filter failure.
	* src/ArgHandler.py (parse_args): Use mime type to identify gramps
	XML data.
	* doc/gramps.1.in: Update man page.
	* doc/gramps-manual/C/cmdline.xml: Update manual.
	* src/po/ru.po: Partial update.
	
2005-08-04  Don Allingham  <don@gramps-project.org>
	* src/PeopleModel.py: provide a work around for the python 2.3 bug
	unicode sorting problem with locale.strcoll. For a nul termination
	during sorting, strip it off after sorting. Only used for
	python2.3, since this bug was fixed in python 2.4.

2005-08-03  Don Allingham  <don@gramps-project.org>
	* src/NavWebPage.py: use new ProgressMeter, add ability to