@@ -1,3 +1,8 @@
+2005-08-05  Alex Roitman  <shura@gramps-project.org>
+	* src/Spell.py: Make more robust to failure.
+	* src/Makefile.am: Ship new file.
+	* NEWS: Update.
+
 2005-08-05  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
 	* src/plugins/Checkpoint.py (rcs): define variable comment before using it. 
 
